<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/log_in_background"
    tools:context=".SignInActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="78dp"
        android:layout_height="46dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/WomAppTextview"
        app:layout_constraintVertical_bias="0.017"
        app:srcCompat="@mipmap/logo_womapp" />

    <ImageView
        android:id="@+id/logo2"
        android:layout_width="78dp"
        android:layout_height="46dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/WomAppTextview"
        app:layout_constraintVertical_bias="0.024"
        app:srcCompat="@mipmap/logo_womapp" />

    <TextView
        android:id="@+id/WomAppTextview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alfa_slab_one"
        android:text="WOMAPP"
        android:textAlignment="center"
        android:textColor="#03A9F4"
        android:textSize="30sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/logInTexView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="356dp"
        android:layout_height="47dp"
        android:text="@string/SlogaApp"
        android:textAlignment="center"
        android:textColor="#39362F"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WomAppTextview"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/logInTexView"
        android:layout_width="0dp"
        android:layout_height="565dp"
        android:background="@drawable/log_in_textview_bg"
        android:paddingTop="30dp"
        android:text="@string/SignInText"
        android:textAlignment="center"
        android:textColor="#2196F3"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/usernameID"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="Username"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/logInTexView" />

    <EditText
        android:id="@+id/EmailID"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameID" />

    <EditText
        android:id="@+id/passwordID"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmailID" />

    <EditText
        android:id="@+id/ConfirmPasswordID"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="Confirm Password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordID" />

    <Button
        android:id="@+id/SignInButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/button_bg"
        android:stateListAnimator="@android:anim/fade_out"
        android:text="REGISTRATI"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/ExceptionMessageS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="413dp"
        android:layout_height="31dp"
        app:layout_constraintBottom_toTopOf="@+id/logInTexView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:visibility="invisible" />

    <RadioGroup
        android:id="@+id/SessoGroup"
        android:layout_width="0dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ConfirmPasswordID">

        <TextView
            android:id="@+id/Sesso"
            android:layout_width="28dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="Genere:" />

        <RadioButton
            android:id="@+id/Uomo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Uomo" />

        <RadioButton
            android:id="@+id/Donna"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Donna" />

        <RadioButton
            android:id="@+id/Altro"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Altro" />

    </RadioGroup>

    <TextView
        android:id="@+id/ExceptionMessageS"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:text="@string/VerificationEmail"
        android:textAlignment="center"
        android:textColor="#F44336"
        android:textStyle="italic"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/logInTexView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/EtaGroup"
        android:layout_width="0dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SessoGroup">

        <TextView
            android:id="@+id/textView"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:text="Età:" />

        <RadioButton
            android:id="@+id/a"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="10 - 18" />

        <RadioButton
            android:id="@+id/b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="19 - 30" />

        <RadioButton
            android:id="@+id/c"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="31 - 50" />

        <RadioButton
            android:id="@+id/over50"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="> 50" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>